Unix time converted to uint64

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,14 +8,14 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "-Wno-unknown-pragmas",
-                "${workspaceFolder}/netflow_exporter.c",
-                "${workspaceFolder}/netflow_exporter.h",
-                "${workspaceFolder}/arguments.c",
-                "${workspaceFolder}/arguments.h",
-                "${workspaceFolder}/nf_cache.c",
-                "${workspaceFolder}/nf_cache.h",
+                "${workspaceFolder}/src/netflow_exporter.c",
+                "${workspaceFolder}/src/netflow_exporter.h",
+                "${workspaceFolder}/src/arguments.c",
+                "${workspaceFolder}/src/arguments.h",
+                "${workspaceFolder}/src/nf_cache.c",
+                "${workspaceFolder}/src/nf_cache.h",
                 "-o",
-                "${workspaceFolder}/../flow",
+                "${workspaceFolder}/flow",
                 "-lpcap"
             ],
             "options": {
