--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/../flow",
-            "args": ["-a", "30", "-i", "8", "-c", "127.0.0.1:2055", "-f", "${workspaceFolder}/../captured_packets/active_inactive_test.pcap"],
+            "program": "${workspaceFolder}/flow",
+            "args": ["-a", "60", "-i", "10", "-c", "0.0.0.0:2055", "-f", "${workspaceFolder}/pcap_files/icmp-timeout.pcap"],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "build"
         }
